--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.join.jsx
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+join.jsx
